@@ -10,6 +10,7 @@ CHANGELOG Roundcube Webmail
 - Fix needless security warning on BMP attachments display (#1490282)
 - Fix handling of some improper constructs in format=flowed text as per the RFC3676[4.5] (#1490284)
 - Fix performance of rcube_db_mysql::get_variable()
+- Fix missing or not up-to-date CATEGORIES entry in vCard export (#1490277)
 
 RELEASE 1.1.0
 -------------
